<resources>
    <!-- 公共标签 -->
    <string name="app_name">whiteskyUI</string>
    <string name="title_default">敬请期待</string>
    <string name="title_bg_ok">【  按下确定键更换  】</string>

    <!--Home 页-->
    <string name="str_home_welcome">欢迎使用皓空巨幕播放器</string>
    <string name="str_home_peo">个人页面</string>
    <string name="str_home_media">多媒体</string>
    <string name="str_home_sys">系统设置</string>

    <!-- Admin页面 -->
    <string name="title_admin_account">账号管理</string>
    <string name="title_admin_device_info">设备信息</string>
    <string name="title_admin_account_type_visitor">访客模式</string>
    <string name="title_admin_account_login_btn">登录</string>
    <string name="str_admin_device_terminal_model">终端型号</string>
    <string name="str_admin_device_sys_version_date">版本日期</string>
    <string name="str_admin_device_sys_version">系统版本</string>
    <string name="str_admin_device_sys_sn">SN号</string>
    <string name="str_admin_device_ui_version">UI版本</string>
    <string name="str_admin_device_ram_info">内存信息</string>
    <string name="str_admin_device_rom_info">存储空间</string>
    <string name="str_admin_device_common_available">可用</string>
    <string name="str_admin_device_common_all">总共</string>
    <string name="str_admin_device_mac_adr">有线 MAC地址</string>
    <string name="str_admin_device_wifi_mac_adr">WIFI MAC地址</string>
    <string name="str_admin_device_default">PS500</string>

    <!-- 系统设置之设置引导页 -->
    <string name="setup_title_language">语言设置</string>
    <string name="setup_title_update">软件升级</string>
    <string name="setup_title_net">网络设置</string>
    <string name="setup_title_speed">网络测速</string>
    <string name="setup_title_seo">内存优化</string>
    <string name="setup_title_wifi">无线网络</string>
    <string name="setup_title_login">注册登陆</string>
    <string name="setup_title_format">格式化硬盘</string>
    <string name="setup_net_pass_info">选择跳过可直接跳转到主页面，但设备不被激活，是否跳过？</string>
    <string name="setup_net_pass">跳过</string>

    <!--系统设置之磁盘格式化页-->
    <string name="str_format_description_default">格式化设备SATA口上的硬盘</string>
    <string name="str_format_description_done">硬盘格式化已经完成</string>
    <string name="str_format_search_sata_disk">寻找SATA硬盘中...</string>
    <string name="str_format_not_found_sata">找不到SATA硬盘,请确认SATA硬盘的存在(SATA硬盘不能带电插拔)!</string>
    <string name="str_format_btn">点击格式化</string>
    <string name="str_format_warning">格式化硬盘将失去硬盘数据,您确认需要格式化吗?</string>
    <string name="str_format_padding">格式化进行中，请耐心等待，勿操作硬盘或断开电源！！！</string>

    <!--系统设置之系统升级页-->
    <string name="str_update_found">有可升级的升级包</string>
    <string name="str_update_btn">点击安装</string>
    <string name="str_ota_download_btn">点击下载并自动安装</string>

    <string name="str_install_found">有可安装的安装包</string>
    <string name="str_install_updating">正在安装中，请勿进行任何操作，请勿断开电源！！！</string>

    <string name="title_check_update">点击按钮检查更新</string>
    <string name="title_net_update">正在下载，请稍后...</string>
    <string name="title_net_update_finish">更新完成，稍后重启</string>
    <string name="title_net_update_not_found">没有找到更新的版本！</string>
    <string name="title_server_connect_error">服务器连接失败！</string>
    <string name="title_net_update_too_large">网络升级包过大,请使用本地升级！</string>

    <string name="str_update_local_title">使用U盘本地升级</string>
    <string name="str_update_local_not_found">无可用升级包，请检查U盘</string>
    <string name="str_update_local_check">正在检查U盘升级包，请稍候</string>

    <string name="str_update_file_download_ready">升级包下载完毕，校验通过，将进行安装。。。</string>
    <string name="str_update_file_check_failed">升级包校验失败，请联系管理员检查服务器上的升级包！</string>

    <!--系统设置之内存优化页-->
    <string name="title_memory_footprint">内存占用:</string>
    <string name="title_already_cleanup">已清理</string>

    <!--多媒体页-->
    <string name="str_media_file_title">文件名</string>
    <string name="str_media_file_duration">时长</string>
    <string name="str_media_display_scale">比例</string>
    <string name="str_media_file_state">状态</string>
    <string name="str_media_list_all">媒体库</string>
    <string name="str_media_list_usb">移动盘</string>

    <string name="str_media_play_pause">暂停播放</string>
    <string name="str_media_play_resume">继续播放</string>
    <string name="str_media_play_path_error">空的文件路径</string>
    <string name="str_media_play_file_not_found_error">找不到媒体文件</string>
    <string name="str_media_play_list_empty">请检查播放列表</string>

    <string name="str_media_receive_mqtt_toast">收到远程控制命令</string>
    <string name="str_media_usb_device_plug_in_toast">usb设备插入:</string>
    <string name="str_media_usb_device_plug_out_toast">usb设备拔出:</string>
    <string name="str_media_wait_capacity">--G/--G</string>

    <string name="str_media_download_waiting">排队...</string>
    <string name="str_media_download_pause">暂停:</string>
    <string name="str_media_download_error">错误！</string>


    <string name="str_media_cloud_file_need_download_toast">云端文件需下载后才能加入播放列表</string>
    <string name="str_media_cloud_file_need_login_toast">云端文件列表需要登录本设备后才能查看</string>
    <string name="str_media_cloud_file_could_not_export_toast">云端文件无法导出到U盘</string>
    <string name="str_media_file_copy_toast">拷贝文件:</string>
    <string name="str_media_file_delete_toast">删除文件:</string>
    <string name="str_media_file_copy_process_dialog_title">拷贝文件</string>
    <string name="str_media_file_delete_dialog_title">您是否要删除文件?</string>
    <string name="str_media_file_copy_same_dialog_title">个文件在目标文件夹内已存在</string>
    <string name="str_media_file_copy_process_dialog_prompt">正在拷贝文件,请耐心等待,不要退出或插拔usb设备!</string>
    <string name="str_media_file_copy_capacity_prompt">磁盘容量不足，请删除部分内容再进行拷贝!</string>


    <string name="str_media_full_screen_quite">您是否要退出全屏？</string>
    <string name="str_media_dialog_button_ok">确定</string>
    <string name="str_media_dialog_button_cancel">取消</string>

    <string name="str_media_dialog_copy_continue">覆盖</string>
    <string name="str_media_dialog_copy_cancel">取消</string>
    <string name="str_media_dialog_copy_skip">跳过</string>

    <string name="str_media_mask_paint_begin">鼠标左键点出多边形</string>
    <string name="str_media_dialog_mask_generate_title">窗口生成</string>
    <string name="str_media_dialog_mask_generate_message">多边形窗口生成中...</string>

    <string name="str_media_scale_fix_xy">拉伸</string>
    <string name="str_media_scale_fix_center">等比</string>

    <string name="str_media_info_name">文件名:</string>
    <string name="str_media_info_type">文件类型:</string>
    <string name="str_media_info_wh">宽高:</string>
    <string name="str_media_info_size">大小:</string>
    <string name="str_media_info_bps">码率:</string>

    <!--网络配置页-->
    <string name="title_net_connected">有线网络已连接</string>
    <string name="str_connect_success">成功连接</string>

</resources>
