<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false">

    <TextView
        android:layout_width="@dimen/x256"
        android:layout_height="@dimen/x90"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x100"
        android:text="@string/setup_title_login"
        android:textColor="@color/white"
        android:textSize="@dimen/x64" />

    <ImageView
        android:id="@+id/iv_setup_login"
        android:layout_width="@dimen/x400"
        android:layout_height="@dimen/x400"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x260"
       />
    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x90"
        android:layout_below="@+id/iv_setup_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x30"
        android:gravity="center"
        android:text="@string/setup_net_pass_info"
        android:textColor="@color/white"
        android:textSize="@dimen/x64"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/bt_login_pass"
        android:layout_width="@dimen/x500"
        android:layout_height="@dimen/x100"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/tv_pass"
        android:layout_marginTop="@dimen/x30"
        android:focusable="true"
        android:background="@drawable/selector_button"
        android:text="@string/setup_net_pass"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/x70"
        android:focusable="false"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/x56"
            android:layout_height="@dimen/x56"
            android:focusable="false"
            android:src="@drawable/img_arrow_left" />

        <TextView
            android:layout_width="@dimen/x120"
            android:layout_height="@dimen/x56"
            android:focusable="false"
            android:text="上一页"
            android:textColor="#eeeeee"
            android:textSize="@dimen/x40" />
    </LinearLayout>
</RelativeLayout>
